@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,8 @@
  */
 package com.oracle.svm.hosted;
 
+import static com.oracle.svm.core.util.VMError.shouldNotReachHereAtRuntime;
+
 import java.lang.module.Configuration;
 import java.lang.module.FindException;
 import java.lang.module.ModuleDescriptor;
@@ -35,6 +37,7 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -54,15 +57,35 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.graalvm.nativeimage.ImageSingletons;
+import org.graalvm.nativeimage.Platform;
+import org.graalvm.nativeimage.Platforms;
+import org.graalvm.nativeimage.hosted.FieldValueTransformer;
 
-import com.oracle.graal.pointsto.meta.AnalysisUniverse;
+import com.oracle.graal.pointsto.meta.AnalysisType;
+import com.oracle.svm.core.NativeImageClassLoaderOptions;
+import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.feature.InternalFeature;
-import com.oracle.svm.core.jdk.BootModuleLayerSupport;
 import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
+import com.oracle.svm.core.feature.InternalFeature;
+import com.oracle.svm.core.heap.UnknownObjectField;
+import com.oracle.svm.core.hub.DynamicHub;
+import com.oracle.svm.core.jdk.Resources;
+import com.oracle.svm.core.jdk.RuntimeClassLoaderValueSupport;
+import com.oracle.svm.core.jdk.RuntimeModuleSupport;
+import com.oracle.svm.core.util.HostedSubstrateUtil;
 import com.oracle.svm.core.util.VMError;
+import com.oracle.svm.hosted.FeatureImpl.AfterAnalysisAccessImpl;
+import com.oracle.svm.hosted.FeatureImpl.AnalysisAccessBase;
+import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
+import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ModuleSupport;
 import com.oracle.svm.util.ReflectionUtil;
+
+import jdk.internal.module.DefaultRoots;
+import jdk.internal.module.ModuleBootstrap;
+import jdk.internal.module.ModuleReferenceImpl;
+import jdk.internal.module.ServicesCatalog;
+import jdk.internal.module.SystemModuleFinders;
 
 /**
  * This feature:
@@ -103,6 +126,7 @@ import com.oracle.svm.util.ReflectionUtil;
  * </p>
  */
 @AutomaticallyRegisteredFeature
+@SuppressWarnings("unused")
 public final class ModuleLayerFeature implements InternalFeature {
     private ModuleLayerFeatureUtils moduleLayerFeatureUtils;
 
@@ -110,75 +134,108 @@ public final class ModuleLayerFeature implements InternalFeature {
     public void duringSetup(DuringSetupAccess access) {
         FeatureImpl.DuringSetupAccessImpl accessImpl = (FeatureImpl.DuringSetupAccessImpl) access;
         moduleLayerFeatureUtils = new ModuleLayerFeatureUtils(accessImpl.imageClassLoader);
-
-        /*
-         * Generate a temporary module layer to serve as a runtime boot module layer until the
-         * analysis is finished.
-         */
-        Set<String> baseModules = ModuleLayer.boot().modules()
-                        .stream()
-                        .map(Module::getName)
-                        .collect(Collectors.toSet());
-        Function<String, ClassLoader> clf = moduleLayerFeatureUtils::getClassLoaderForBootLayerModule;
-        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
-        BootModuleLayerSupport.instance().setBootLayer(runtimeBootLayer);
+        RuntimeModuleSupport.instance().setHostedToRuntimeModuleMapper(m -> moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(m, accessImpl));
 
         /*
          * Register an object replacer that will ensure all references to hosted module instances
          * are replaced with the appropriate runtime module instance.
          */
-        access.registerObjectReplacer(this::replaceHostedModules);
+        access.registerObjectReplacer(source -> replaceHostedModules(source, accessImpl));
     }
 
-    private Object replaceHostedModules(Object source) {
-        if (source instanceof Module) {
-            Module module = (Module) source;
-            return moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(module, module.getDescriptor());
+    private Object replaceHostedModules(Object source, AnalysisAccessBase access) {
+        if (source instanceof Module module) {
+            return moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(module, access);
+        } else if (source instanceof Class<?> clazz) {
+            /*
+             * If the field Class(=DynamicHub).module is not reachable, we do not see all Module
+             * instances directly. So we also need to scan the module in Class/DynamicHub objects.
+             */
+            moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(clazz.getModule(), access);
+        } else if (source instanceof DynamicHub hub) {
+            moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(hub.getModule(), access);
         }
         return source;
     }
 
     @Override
     public void afterRegistration(AfterRegistrationAccess access) {
-        ImageSingletons.add(BootModuleLayerSupport.class, new BootModuleLayerSupport());
+        ImageSingletons.add(RuntimeModuleSupport.class, new RuntimeModuleSupport());
+
+        List<Module> bootLayerAutomaticModules = ModuleLayer.boot().modules()
+                        .stream()
+                        .filter(m -> m.isNamed() && m.getDescriptor().isAutomatic())
+                        .toList();
+        if (!bootLayerAutomaticModules.isEmpty()) {
+            LogUtils.warning(
+                            "Detected automatic module(s) on the module-path of the image builder:%n%s%nExtending the image builder with automatic modules is not supported and might result in failed build. " +
+                                            "This is probably caused by specifying a jar-file that is not a proper module on the module-path. " +
+                                            "Please ensure that only proper modules are found on the module-path.",
+                            bootLayerAutomaticModules.stream().map(ModuleLayerFeatureUtils::formatModule).collect(Collectors.joining(System.lineSeparator())));
+        }
+    }
+
+    @Override
+    public void beforeAnalysis(BeforeAnalysisAccess access) {
+        scanRuntimeBootLayerPrototype((BeforeAnalysisAccessImpl) access);
+
+        access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleReferenceLocationField, ModuleLayerFeatureUtils.ResetModuleReferenceLocation.INSTANCE);
+        access.registerFieldValueTransformer(moduleLayerFeatureUtils.moduleReferenceImplLocationField, ModuleLayerFeatureUtils.ResetModuleReferenceLocation.INSTANCE);
+    }
+
+    /**
+     * Generate a temporary module layer to serve as a prototype object for
+     * {@link RuntimeModuleSupport}.bootLayer. The value doesn't need to actually be set in the
+     * field, just scanned such that the analysis sees the deep type hierarchy. The field value
+     * wouldn't be processed during analysis anyway since the field is annotated with
+     * {@link UnknownObjectField}, only the field declared type is injected in the type flow graphs.
+     * The concrete value is set in {@link ModuleLayerFeature#afterAnalysis}. Later when the field
+     * is read the lazy value supplier scans the concrete value and patches the shadow heap.
+     */
+    private void scanRuntimeBootLayerPrototype(BeforeAnalysisAccessImpl accessImpl) {
+        Set<String> baseModules = ModuleLayer.boot().modules().stream().map(Module::getName).collect(Collectors.toSet());
+        Function<String, ClassLoader> clf = moduleLayerFeatureUtils::getClassLoaderForBootLayerModule;
+        ModuleLayer runtimeBootLayer = synthesizeRuntimeModuleLayer(new ArrayList<>(List.of(ModuleLayer.empty())), accessImpl, accessImpl.imageClassLoader, baseModules, Set.of(), clf, null);
+        /* Only scan the value if module support is enabled and bootLayer field is reachable. */
+        accessImpl.registerReachabilityHandler((a) -> accessImpl.rescanObject(runtimeBootLayer), ReflectionUtil.lookupField(RuntimeModuleSupport.class, "bootLayer"));
     }
 
     @Override
     public void afterAnalysis(AfterAnalysisAccess access) {
-        FeatureImpl.AfterAnalysisAccessImpl accessImpl = (FeatureImpl.AfterAnalysisAccessImpl) access;
-        AnalysisUniverse universe = accessImpl.getUniverse();
+        AfterAnalysisAccessImpl accessImpl = (AfterAnalysisAccessImpl) access;
 
-        Stream<Module> analysisReachableModules = universe.getTypes()
+        Set<Module> runtimeImageModules = accessImpl.getUniverse().getTypes()
                         .stream()
-                        .filter(t -> t.isReachable() && !t.isArray())
+                        .filter(t1 -> !t1.isInBaseLayer() && typeIsReachable(t1))
                         .map(t -> t.getJavaClass().getModule())
-                        .distinct();
-
-        Set<Module> analysisReachableNamedModules = analysisReachableModules
-                        .filter(Module::isNamed)
                         .collect(Collectors.toSet());
 
-        Set<String> extraModules = new HashSet<>();
+        Set<Module> runtimeImageNamedModules = runtimeImageModules.stream().filter(Module::isNamed).collect(Collectors.toSet());
+        Set<Module> runtimeImageUnnamedModules = runtimeImageModules.stream().filter(Predicate.not(Module::isNamed)).collect(Collectors.toSet());
 
-        extraModules.addAll(ImageSingletons.lookup(ResourcesFeature.class).includedResourcesModules);
-
-        String explicitlyAddedModules = System.getProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES, "");
-        if (!explicitlyAddedModules.isEmpty()) {
-            extraModules.addAll(Arrays.asList(SubstrateUtil.split(explicitlyAddedModules, ",")));
-        }
-
-        List<String> nonExplicit = List.of("ALL-DEFAULT", "ALL-SYSTEM", "ALL-MODULE-PATH");
-        extraModules.stream().filter(Predicate.not(nonExplicit::contains)).forEach(moduleName -> {
+        /*
+         * Parse explicitly added modules via --add-modules. This is done early as this information
+         * is required when filtering the analysis reachable module set.
+         */
+        Set<String> extraModules = ModuleSupport.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES);
+        extraModules.addAll(Resources.getIncludedResourcesModules());
+        extraModules.stream().filter(Predicate.not(ModuleSupport.nonExplicitModules::contains)).forEach(moduleName -> {
             Optional<?> module = accessImpl.imageClassLoader.findModule(moduleName);
             if (module.isEmpty()) {
-                VMError.shouldNotReachHere("Explicitly required module " + moduleName + " is not available");
+                throw VMError.shouldNotReachHere("Explicitly required module " + moduleName + " is not available");
             }
-            analysisReachableNamedModules.add((Module) module.get());
+            runtimeImageNamedModules.add((Module) module.get());
         });
 
-        Set<Module> analysisReachableSyntheticModules = analysisReachableNamedModules
+        /*
+         * We need to include synthetic modules in the runtime module system. Some modules, such as
+         * jdk.proxy, are created for all class loaders, so we need to make sure to not include
+         * those made for the builder class loader.
+         */
+        Set<Module> analysisReachableSyntheticModules = runtimeImageNamedModules
                         .stream()
                         .filter(ModuleLayerFeatureUtils::isModuleSynthetic)
+                        .filter(m -> m.getClassLoader() != accessImpl.imageClassLoader.getClassLoader())
                         .collect(Collectors.toSet());
 
         /*
@@ -186,7 +243,7 @@ public final class ModuleLayerFeature implements InternalFeature {
          * layer. This order is important because in order to synthesize a module layer, all of its
          * parent module layers also need to be synthesized as well.
          */
-        List<ModuleLayer> reachableModuleLayers = analysisReachableNamedModules
+        List<ModuleLayer> reachableModuleLayers = runtimeImageNamedModules
                         .stream()
                         .map(Module::getLayer)
                         .filter(Objects::nonNull)
@@ -194,15 +251,133 @@ public final class ModuleLayerFeature implements InternalFeature {
                         .sorted(Comparator.comparingInt(ModuleLayerFeatureUtils::distanceFromBootModuleLayer))
                         .collect(Collectors.toList());
 
-        List<ModuleLayer> runtimeModuleLayers = synthesizeRuntimeModuleLayers(accessImpl, reachableModuleLayers, analysisReachableNamedModules, analysisReachableSyntheticModules);
-        ModuleLayer runtimeBootLayer = runtimeModuleLayers.get(0);
-        BootModuleLayerSupport.instance().setBootLayer(runtimeBootLayer);
+        /*
+         * Remove once GR-44584 is merged. See
+         * com.oracle.svm.driver.NativeImage.BuildConfiguration.getImageProvidedJars().
+         */
+        if (!accessImpl.imageClassLoader.applicationClassPath().isEmpty()) {
+            extraModules.add("ALL-MODULE-PATH");
+        }
+
+        Set<String> rootModules = calculateRootModules(extraModules);
+        List<ModuleLayer> runtimeModuleLayers = synthesizeRuntimeModuleLayers(accessImpl, reachableModuleLayers, runtimeImageNamedModules, analysisReachableSyntheticModules, rootModules);
+        ModuleLayer runtimeBootLayer = runtimeModuleLayers.getFirst();
+        RuntimeModuleSupport.instance().setBootLayer(runtimeBootLayer);
+        RuntimeClassLoaderValueSupport.instance().update(runtimeModuleLayers);
 
         /*
          * Ensure that runtime modules have the same relations (i.e., reads, opens and exports) as
          * the originals.
          */
-        replicateVisibilityModifications(runtimeBootLayer, accessImpl.imageClassLoader, analysisReachableNamedModules);
+        replicateVisibilityModifications(runtimeBootLayer, accessImpl, accessImpl.imageClassLoader, runtimeImageNamedModules, runtimeImageUnnamedModules);
+        replicateNativeAccess(accessImpl, runtimeImageNamedModules);
+    }
+
+    /**
+     * This method is a custom version of jdk.internal.module.ModuleBootstrap#boot2() used to
+     * compute the root module set that should be seen at image runtime. It reuses the same methods
+     * as the original (via reflective invokes).
+     */
+    private Set<String> calculateRootModules(Collection<String> addModules) {
+        ModuleFinder upgradeModulePath = NativeImageClassLoaderSupport.finderFor("jdk.module.upgrade.path");
+        ModuleFinder appModulePath = moduleLayerFeatureUtils.getAppModuleFinder();
+        String mainModule = ModuleLayerFeatureUtils.getMainModuleName();
+        Set<String> limitModules = ModuleSupport.parseModuleSetModifierProperty(ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES);
+
+        Object systemModules = null;
+        ModuleFinder systemModuleFinder;
+
+        boolean haveModulePath = appModulePath != null || upgradeModulePath != null;
+
+        if (!haveModulePath && addModules.isEmpty() && limitModules.isEmpty()) {
+            systemModules = moduleLayerFeatureUtils.invokeSystemModuleFinderSystemModules(mainModule);
+        }
+        if (systemModules == null) {
+            systemModules = moduleLayerFeatureUtils.invokeSystemModuleFinderAllSystemModules();
+        }
+        if (systemModules != null) {
+            systemModuleFinder = moduleLayerFeatureUtils.invokeSystemModuleFinderOf(systemModules);
+        } else {
+            systemModuleFinder = SystemModuleFinders.ofSystem();
+        }
+
+        /*
+         * We need to include module roots required for Native Image to work at runtime.
+         */
+        ModuleFinder builderModuleFinder = NativeImageClassLoaderSupport.finderFor("jdk.module.path");
+        if (builderModuleFinder != null) {
+            systemModuleFinder = ModuleFinder.compose(systemModuleFinder, builderModuleFinder);
+        }
+
+        if (upgradeModulePath != null) {
+            systemModuleFinder = ModuleFinder.compose(upgradeModulePath, systemModuleFinder);
+        }
+
+        ModuleFinder finder;
+        if (appModulePath != null) {
+            finder = ModuleFinder.compose(systemModuleFinder, appModulePath);
+        } else {
+            finder = systemModuleFinder;
+        }
+
+        Set<String> roots = new HashSet<>();
+
+        if (mainModule != null) {
+            roots.add(mainModule);
+        }
+
+        boolean addAllDefaultModules = false;
+        boolean addAllSystemModules = false;
+        boolean addAllApplicationModules = false;
+        for (String mod : addModules) {
+            switch (mod) {
+                case ModuleSupport.MODULE_SET_ALL_DEFAULT:
+                    addAllDefaultModules = true;
+                    break;
+                case ModuleSupport.MODULE_SET_ALL_SYSTEM:
+                    addAllSystemModules = true;
+                    break;
+                case ModuleSupport.MODULE_SET_ALL_MODULE_PATH:
+                    addAllApplicationModules = true;
+                    break;
+                default:
+                    roots.add(mod);
+            }
+        }
+
+        if (!limitModules.isEmpty()) {
+            finder = moduleLayerFeatureUtils.invokeModuleBootstrapLimitFinder(finder, limitModules, roots);
+        }
+
+        if (mainModule == null || addAllDefaultModules) {
+            roots.addAll(moduleLayerFeatureUtils.invokeDefaultRootsComputeMethod(systemModuleFinder, finder));
+        }
+
+        if (addAllSystemModules) {
+            ModuleFinder f = finder;
+            systemModuleFinder.findAll()
+                            .stream()
+                            .map(ModuleReference::descriptor)
+                            .map(ModuleDescriptor::name)
+                            .filter(mn -> f.find(mn).isPresent())
+                            .forEach(roots::add);
+        }
+
+        if (appModulePath != null && addAllApplicationModules) {
+            ModuleFinder f = finder;
+            appModulePath.findAll()
+                            .stream()
+                            .map(ModuleReference::descriptor)
+                            .map(ModuleDescriptor::name)
+                            .filter(mn -> f.find(mn).isPresent())
+                            .forEach(roots::add);
+        }
+
+        return roots;
+    }
+
+    private static boolean typeIsReachable(AnalysisType t) {
+        return t.isReachable() && !t.isArray();
     }
 
     /*
@@ -213,21 +388,8 @@ public final class ModuleLayerFeature implements InternalFeature {
         return Stream.concat(Stream.of(m.getName()), requiredModules);
     }
 
-    private List<ModuleLayer> synthesizeRuntimeModuleLayers(FeatureImpl.AfterAnalysisAccessImpl accessImpl, List<ModuleLayer> hostedModuleLayers, Collection<Module> reachableNamedModules,
-                    Collection<Module> reachableSyntheticModules) {
-        /*
-         * Module layer for image build contains modules from the module path that need to be
-         * included in the runtime boot module layer. Furthermore, this module layer is not needed
-         * at runtime. Because of that, we find its modules ahead of time to include it in the
-         * runtime boot module layer.
-         */
-        ModuleLayer moduleLayerForImageBuild = accessImpl.imageClassLoader.classLoaderSupport.moduleLayerForImageBuild;
-        Set<String> moduleLayerForImageBuildModules = moduleLayerForImageBuild
-                        .modules()
-                        .stream()
-                        .map(Module::getName)
-                        .collect(Collectors.toSet());
-
+    private List<ModuleLayer> synthesizeRuntimeModuleLayers(AfterAnalysisAccessImpl accessImpl, List<ModuleLayer> hostedModuleLayers, Collection<Module> reachableNamedModules,
+                    Collection<Module> reachableSyntheticModules, Collection<String> rootModuleNames) {
         /*
          * A mapping from hosted to runtime module layers. Used when looking up runtime module layer
          * instances for hosted parent module layers.
@@ -244,48 +406,42 @@ public final class ModuleLayerFeature implements InternalFeature {
                         .collect(Collectors.toSet());
 
         for (ModuleLayer hostedModuleLayer : hostedModuleLayers) {
-            if (hostedModuleLayer == moduleLayerForImageBuild) {
+            if (hostedModuleLayer == accessImpl.imageClassLoader.classLoaderSupport.moduleLayerForImageBuild) {
                 continue;
             }
 
-            boolean hostedLayerIsBootModuleLayer = hostedModuleLayer == ModuleLayer.boot();
+            boolean isBootModuleLayer = hostedModuleLayer == ModuleLayer.boot();
 
-            Set<String> reachableModuleNamesForHostedModuleLayer = hostedModuleLayer
+            Set<String> moduleNames = hostedModuleLayer
                             .modules()
                             .stream()
                             .map(Module::getName)
                             .collect(Collectors.toSet());
-            if (hostedLayerIsBootModuleLayer) {
-                reachableModuleNamesForHostedModuleLayer.addAll(moduleLayerForImageBuildModules);
-                Module builderModule = ModuleLayerFeature.class.getModule();
-                assert builderModule != null;
-                reachableModuleNamesForHostedModuleLayer.remove(builderModule.getName());
+            moduleNames.retainAll(allReachableAndRequiredModuleNames);
+            if (isBootModuleLayer) {
+                moduleNames.addAll(rootModuleNames);
             }
-            reachableModuleNamesForHostedModuleLayer.retainAll(allReachableAndRequiredModuleNames);
-
-            Function<String, ClassLoader> clf = name -> moduleLayerFeatureUtils.getClassLoaderForModuleInModuleLayer(hostedModuleLayer, name);
 
             Set<Module> syntheticModules = new HashSet<>();
-            if (hostedLayerIsBootModuleLayer) {
+            if (isBootModuleLayer) {
                 syntheticModules.addAll(reachableSyntheticModules);
             }
 
             List<ModuleLayer> parents = hostedModuleLayer.parents().stream().map(moduleLayerPairs::get).collect(Collectors.toList());
 
-            Configuration cf = null;
-            if (!hostedLayerIsBootModuleLayer) {
-                cf = hostedModuleLayer.configuration();
-            }
-            ModuleLayer runtimeModuleLayer = synthesizeRuntimeModuleLayer(parents, accessImpl.imageClassLoader, reachableModuleNamesForHostedModuleLayer, syntheticModules, clf, cf);
+            Configuration cf = isBootModuleLayer ? null : hostedModuleLayer.configuration();
+            Function<String, ClassLoader> clf = name -> moduleLayerFeatureUtils.getClassLoaderForModuleInModuleLayer(hostedModuleLayer, name);
+
+            ModuleLayer runtimeModuleLayer = synthesizeRuntimeModuleLayer(parents, accessImpl, accessImpl.imageClassLoader, moduleNames, syntheticModules, clf, cf);
             moduleLayerPairs.put(hostedModuleLayer, runtimeModuleLayer);
         }
 
-        moduleLayerPairs.remove(ModuleLayer.empty());
-        return new ArrayList<>(moduleLayerPairs.values());
+        List<ModuleLayer> runtimeModuleLayers = hostedModuleLayers.stream().map(moduleLayerPairs::get).filter(Objects::nonNull).toList();
+        return runtimeModuleLayers;
     }
 
-    private ModuleLayer synthesizeRuntimeModuleLayer(List<ModuleLayer> parentLayers, ImageClassLoader cl, Set<String> reachableModules, Set<Module> syntheticModules,
-                    Function<String, ClassLoader> clf, Configuration cfOverride) {
+    private ModuleLayer synthesizeRuntimeModuleLayer(List<ModuleLayer> parentLayers, AnalysisAccessBase accessImpl, ImageClassLoader cl, Set<String> reachableModules,
+                    Set<Module> syntheticModules, Function<String, ClassLoader> clf, Configuration cfOverride) {
         /**
          * For consistent module lookup we reuse the {@link ModuleFinder}s defined and used in
          * {@link NativeImageClassLoaderSupport}.
@@ -303,75 +459,111 @@ public final class ModuleLayerFeature implements InternalFeature {
         ModuleLayer runtimeModuleLayer = null;
         try {
             runtimeModuleLayer = moduleLayerFeatureUtils.createNewModuleLayerInstance(runtimeModuleLayerConfiguration);
-            Map<String, Module> nameToModule = moduleLayerFeatureUtils.synthesizeNameToModule(runtimeModuleLayer, clf);
+            Map<String, Module> nameToModule = moduleLayerFeatureUtils.synthesizeNameToModule(accessImpl, runtimeModuleLayer, clf);
             for (Module syntheticModule : syntheticModules) {
-                Module runtimeSyntheticModule = moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(syntheticModule, syntheticModule.getDescriptor());
+                Module runtimeSyntheticModule = moduleLayerFeatureUtils.getOrCreateRuntimeModuleForHostedModule(syntheticModule, accessImpl);
                 nameToModule.putIfAbsent(runtimeSyntheticModule.getName(), runtimeSyntheticModule);
-                moduleLayerFeatureUtils.patchModuleLayerField(runtimeSyntheticModule, runtimeModuleLayer);
+                moduleLayerFeatureUtils.patchModuleLayerField(accessImpl, runtimeSyntheticModule, runtimeModuleLayer);
             }
-            patchRuntimeModuleLayer(runtimeModuleLayer, nameToModule, parentLayers);
+            ServicesCatalog servicesCatalog = synthesizeRuntimeModuleLayerServicesCatalog(nameToModule);
+            patchRuntimeModuleLayer(accessImpl, runtimeModuleLayer, nameToModule, parentLayers, servicesCatalog);
+            accessImpl.rescanField(runtimeModuleLayer, moduleLayerFeatureUtils.moduleLayerModulesField);
             return runtimeModuleLayer;
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException ex) {
             throw VMError.shouldNotReachHere("Failed to synthesize the runtime module layer: " + runtimeModuleLayer, ex);
         }
     }
 
-    private void replicateVisibilityModifications(ModuleLayer runtimeBootLayer, ImageClassLoader cl, Set<Module> analysisReachableNamedModules) {
+    private static ServicesCatalog synthesizeRuntimeModuleLayerServicesCatalog(Map<String, Module> nameToModule) {
+        ServicesCatalog servicesCatalog = ServicesCatalog.create();
+        for (Module m : nameToModule.values()) {
+            servicesCatalog.register(m);
+        }
+        return servicesCatalog;
+    }
+
+    private void replicateVisibilityModifications(ModuleLayer runtimeBootLayer, AfterAnalysisAccessImpl accessImpl, ImageClassLoader cl, Set<Module> analysisReachableNamedModules,
+                    Set<Module> analysisReachableUnnamedModules) {
         List<Module> applicationModules = findApplicationModules(runtimeBootLayer, cl.applicationModulePath());
 
-        Map<Module, Module> modulePairs = analysisReachableNamedModules
+        Map<Module, Module> namedModulePairs = analysisReachableNamedModules
                         .stream()
-                        .collect(Collectors.toMap(m -> m, m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
-        modulePairs.put(moduleLayerFeatureUtils.allUnnamedModule, moduleLayerFeatureUtils.allUnnamedModule);
-        modulePairs.put(moduleLayerFeatureUtils.everyoneModule, moduleLayerFeatureUtils.everyoneModule);
-
-        Module builderModule = ModuleLayerFeature.class.getModule();
-        assert builderModule != null;
+                        .collect(Collectors.toMap(Function.identity(), m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
+        Map<Module, Module> unnamedModulePairs = analysisReachableUnnamedModules
+                        .stream()
+                        .collect(Collectors.toMap(Function.identity(), m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
+        unnamedModulePairs.put(moduleLayerFeatureUtils.allUnnamedModule, moduleLayerFeatureUtils.allUnnamedModule);
+        unnamedModulePairs.put(moduleLayerFeatureUtils.everyoneModule, moduleLayerFeatureUtils.everyoneModule);
 
         try {
-            for (Map.Entry<Module, Module> e1 : modulePairs.entrySet()) {
+            for (Map.Entry<Module, Module> e1 : namedModulePairs.entrySet()) {
                 Module hostedFrom = e1.getKey();
-                if (!hostedFrom.isNamed()) {
-                    continue;
-                }
                 Module runtimeFrom = e1.getValue();
-                for (Map.Entry<Module, Module> e2 : modulePairs.entrySet()) {
-                    Module hostedTo = e2.getKey();
-                    if (hostedTo == hostedFrom) {
-                        continue;
-                    }
-                    Module runtimeTo = e2.getValue();
-                    if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.canRead(hostedTo)) {
-                        moduleLayerFeatureUtils.addReads(runtimeFrom, runtimeTo);
-                        if (hostedFrom == builderModule) {
-                            for (Module appModule : applicationModules) {
-                                moduleLayerFeatureUtils.addReads(appModule, runtimeTo);
-                            }
-                        }
-                    }
-                    for (String pn : runtimeFrom.getPackages()) {
-                        if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isOpen(pn, hostedTo)) {
-                            moduleLayerFeatureUtils.addOpens(runtimeFrom, pn, runtimeTo);
-                            if (hostedTo == builderModule) {
-                                for (Module appModule : applicationModules) {
-                                    moduleLayerFeatureUtils.addOpens(runtimeFrom, pn, appModule);
-                                }
-                            }
-                        }
-                        if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isExported(pn, hostedTo)) {
-                            moduleLayerFeatureUtils.addExports(runtimeFrom, pn, runtimeTo);
-                            if (hostedTo == builderModule) {
-                                for (Module appModule : applicationModules) {
-                                    moduleLayerFeatureUtils.addExports(runtimeFrom, pn, appModule);
-                                }
-                            }
-                        }
-                    }
+                for (Map.Entry<Module, Module> e2 : namedModulePairs.entrySet()) {
+                    replicateVisibilityModification(accessImpl, applicationModules, hostedFrom, e2.getKey(), runtimeFrom, e2.getValue());
+                }
+                for (Map.Entry<Module, Module> e2 : unnamedModulePairs.entrySet()) {
+                    replicateVisibilityModification(accessImpl, applicationModules, hostedFrom, e2.getKey(), runtimeFrom, e2.getValue());
                 }
             }
         } catch (IllegalAccessException ex) {
             throw VMError.shouldNotReachHere("Failed to transfer hosted module relations to the runtime boot module layer.", ex);
         }
+    }
+
+    private void replicateVisibilityModification(AfterAnalysisAccessImpl accessImpl, List<Module> applicationModules, Module hostedFrom, Module hostedTo, Module runtimeFrom, Module runtimeTo)
+                    throws IllegalAccessException {
+        if (hostedTo == hostedFrom) {
+            return;
+        }
+
+        Module builderModule = ModuleLayerFeatureUtils.getBuilderModule();
+        assert builderModule != null;
+
+        if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.canRead(hostedTo)) {
+            moduleLayerFeatureUtils.addReads(accessImpl, runtimeFrom, runtimeTo);
+            if (hostedFrom == builderModule) {
+                for (Module appModule : applicationModules) {
+                    moduleLayerFeatureUtils.addReads(accessImpl, appModule, runtimeTo);
+                }
+            }
+        }
+
+        for (String pn : runtimeFrom.getPackages()) {
+            if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isOpen(pn, hostedTo)) {
+                moduleLayerFeatureUtils.addOpens(accessImpl, runtimeFrom, pn, runtimeTo);
+                if (hostedTo == builderModule) {
+                    for (Module appModule : applicationModules) {
+                        moduleLayerFeatureUtils.addOpens(accessImpl, runtimeFrom, pn, appModule);
+                    }
+                }
+            }
+            if (ModuleLayerFeatureUtils.isModuleSynthetic(hostedFrom) || hostedFrom.isExported(pn, hostedTo)) {
+                moduleLayerFeatureUtils.addExports(accessImpl, runtimeFrom, pn, runtimeTo);
+                if (hostedTo == builderModule) {
+                    for (Module appModule : applicationModules) {
+                        moduleLayerFeatureUtils.addExports(accessImpl, runtimeFrom, pn, appModule);
+                    }
+                }
+            }
+        }
+    }
+
+    private void replicateNativeAccess(AfterAnalysisAccessImpl accessImpl, Set<Module> analysisReachableNamedModules) {
+        Map<Module, Module> modulePairs = analysisReachableNamedModules
+                        .stream()
+                        .collect(Collectors.toMap(m -> m, m -> moduleLayerFeatureUtils.getRuntimeModuleForHostedModule(m, false)));
+
+        for (Map.Entry<Module, Module> modulesPair : modulePairs.entrySet()) {
+            Module hosted = modulesPair.getKey();
+            Module runtime = modulesPair.getValue();
+            if (moduleLayerFeatureUtils.allowsNativeAccess(hosted) || moduleLayerFeatureUtils.isNativeAccessEnabledForRuntimeModule(runtime)) {
+                if (!moduleLayerFeatureUtils.allowsNativeAccess(runtime)) {
+                    moduleLayerFeatureUtils.enableNativeAccess(accessImpl, runtime);
+                }
+            }
+        }
+
     }
 
     private static List<Module> findApplicationModules(ModuleLayer runtimeBootLayer, List<Path> applicationModulePath) {
@@ -382,7 +574,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             applicationModuleNames = applicationModuleFinder.findAll()
                             .stream()
                             .map(m -> m.descriptor().name())
-                            .collect(Collectors.toList());
+                            .toList();
         } catch (FindException | ResolutionException | SecurityException ex) {
             throw VMError.shouldNotReachHere("Failed to locate application modules.", ex);
         }
@@ -417,10 +609,11 @@ public final class ModuleLayerFeature implements InternalFeature {
         }
     }
 
-    private void patchRuntimeModuleLayer(ModuleLayer runtimeModuleLayer, Map<String, Module> nameToModule, List<ModuleLayer> parents) {
+    private void patchRuntimeModuleLayer(AnalysisAccessBase accessImpl, ModuleLayer runtimeModuleLayer, Map<String, Module> nameToModule, List<ModuleLayer> parents, ServicesCatalog servicesCatalog) {
         try {
-            moduleLayerFeatureUtils.patchModuleLayerNameToModuleField(runtimeModuleLayer, nameToModule);
-            moduleLayerFeatureUtils.patchModuleLayerParentsField(runtimeModuleLayer, parents);
+            moduleLayerFeatureUtils.patchModuleLayerNameToModuleField(accessImpl, runtimeModuleLayer, nameToModule);
+            moduleLayerFeatureUtils.patchModuleLayerParentsField(accessImpl, runtimeModuleLayer, parents);
+            moduleLayerFeatureUtils.patchModuleLayerServicesCatalogField(accessImpl, runtimeModuleLayer, servicesCatalog);
         } catch (IllegalAccessException ex) {
             throw VMError.shouldNotReachHere("Failed to patch the runtime boot module layer.", ex);
         }
@@ -429,6 +622,7 @@ public final class ModuleLayerFeature implements InternalFeature {
         runtimeModuleLayer.modules();
     }
 
+    @Platforms(Platform.HOSTED_ONLY.class)
     private static final class ModuleLayerFeatureUtils {
         private final Map<ClassLoader, Map<String, Module>> runtimeModules;
         private final ImageClassLoader imageClassLoader;
@@ -437,21 +631,37 @@ public final class ModuleLayerFeature implements InternalFeature {
         private final Set<Module> allUnnamedModuleSet;
         private final Module everyoneModule;
         private final Set<Module> everyoneSet;
-        private final Constructor<Module> moduleConstructor;
+        private final Constructor<Module> namedModuleConstructor;
+        private final Constructor<Module> unnamedModuleConstructor;
         private final Field moduleDescriptorField;
         private final Field moduleLayerField;
         private final Field moduleLoaderField;
         private final Field moduleReadsField;
         private final Field moduleOpenPackagesField;
         private final Field moduleExportedPackagesField;
+        private final Field moduleEnableNativeAccessField;
         private final Method moduleFindModuleMethod;
+        private final Method systemModuleFindersAllSystemModulesMethod;
+        private final Method systemModuleFindersOfMethod;
+        private final Method systemModuleFindersSystemModulesMethod;
+        private final Method moduleBootstrapLimitFinderMethod;
+        private final Method defaultRootsComputeMethod;
         private final Constructor<ModuleLayer> moduleLayerConstructor;
         private final Field moduleLayerNameToModuleField;
         private final Field moduleLayerParentsField;
+        private final Field moduleLayerServicesCatalogField;
+        private final Field moduleLayerModulesField;
+        private final Field moduleReferenceLocationField;
+        private final Field moduleReferenceImplLocationField;
+        private final Set<String> nativeAccessEnabled;
 
         ModuleLayerFeatureUtils(ImageClassLoader cl) {
             runtimeModules = new HashMap<>();
             imageClassLoader = cl;
+            nativeAccessEnabled = NativeImageClassLoaderOptions.EnableNativeAccess.getValue().values().stream()
+                            .flatMap(m -> Arrays.stream(SubstrateUtil.split(m, ",")))
+                            .collect(Collectors.toSet());
+
             Method classGetDeclaredMethods0Method = ReflectionUtil.lookupMethod(Class.class, "getDeclaredFields0", boolean.class);
             try {
                 ModuleSupport.accessModuleByClass(ModuleSupport.Access.OPEN, ModuleLayerFeature.class, Module.class);
@@ -471,28 +681,55 @@ public final class ModuleLayerFeature implements InternalFeature {
                 moduleReadsField = findFieldByName(moduleClassFields, "reads");
                 moduleOpenPackagesField = findFieldByName(moduleClassFields, "openPackages");
                 moduleExportedPackagesField = findFieldByName(moduleClassFields, "exportedPackages");
+                // Only present on JDK 19+
+                moduleEnableNativeAccessField = findFieldByName(moduleClassFields, "enableNativeAccess", true);
                 moduleDescriptorField.setAccessible(true);
                 moduleLayerField.setAccessible(true);
                 moduleLoaderField.setAccessible(true);
                 moduleReadsField.setAccessible(true);
                 moduleOpenPackagesField.setAccessible(true);
                 moduleExportedPackagesField.setAccessible(true);
+                if (moduleEnableNativeAccessField != null) {
+                    moduleEnableNativeAccessField.setAccessible(true);
+                }
 
-                allUnnamedModuleSet = new HashSet<>();
+                allUnnamedModuleSet = new HashSet<>(1);
                 allUnnamedModuleSet.add(allUnnamedModule);
                 patchModuleLoaderField(allUnnamedModule, imageClassLoader.getClassLoader());
-                everyoneSet = new HashSet<>();
+                everyoneSet = new HashSet<>(1);
                 everyoneSet.add(everyoneModule);
 
-                moduleConstructor = ReflectionUtil.lookupConstructor(Module.class, ClassLoader.class, ModuleDescriptor.class);
+                namedModuleConstructor = ReflectionUtil.lookupConstructor(Module.class, ClassLoader.class, ModuleDescriptor.class);
+                unnamedModuleConstructor = ReflectionUtil.lookupConstructor(Module.class, ClassLoader.class);
                 moduleFindModuleMethod = ReflectionUtil.lookupMethod(Module.class, "findModule", String.class, Map.class, Map.class, List.class);
+
+                systemModuleFindersAllSystemModulesMethod = ReflectionUtil.lookupMethod(SystemModuleFinders.class, "allSystemModules");
+                systemModuleFindersOfMethod = ReflectionUtil.lookupMethod(SystemModuleFinders.class, "of", Class.forName("jdk.internal.module.SystemModules"));
+                systemModuleFindersSystemModulesMethod = ReflectionUtil.lookupMethod(SystemModuleFinders.class, "systemModules", String.class);
+
+                moduleBootstrapLimitFinderMethod = ReflectionUtil.lookupMethod(ModuleBootstrap.class, "limitFinder", ModuleFinder.class, Set.class, Set.class);
+
+                defaultRootsComputeMethod = ReflectionUtil.lookupMethod(DefaultRoots.class, "compute", ModuleFinder.class, ModuleFinder.class);
 
                 moduleLayerConstructor = ReflectionUtil.lookupConstructor(ModuleLayer.class, Configuration.class, List.class, Function.class);
                 moduleLayerNameToModuleField = ReflectionUtil.lookupField(ModuleLayer.class, "nameToModule");
                 moduleLayerParentsField = ReflectionUtil.lookupField(ModuleLayer.class, "parents");
+                moduleLayerServicesCatalogField = ReflectionUtil.lookupField(ModuleLayer.class, "servicesCatalog");
+                moduleLayerModulesField = ReflectionUtil.lookupField(ModuleLayer.class, "modules");
+                moduleReferenceLocationField = ReflectionUtil.lookupField(ModuleReference.class, "location");
+                moduleReferenceImplLocationField = ReflectionUtil.lookupField(ModuleReferenceImpl.class, "location");
             } catch (ReflectiveOperationException | NoSuchElementException ex) {
                 throw VMError.shouldNotReachHere("Failed to retrieve fields of the Module/ModuleLayer class.", ex);
             }
+        }
+
+        private boolean isNativeAccessEnabledForRuntimeBootLayerModule(String runtimeModuleName) {
+            return nativeAccessEnabled.contains(runtimeModuleName);
+        }
+
+        private boolean isNativeAccessEnabledForRuntimeModule(Module runtimeModule) {
+            String runtimeModuleName = runtimeModule.getName();
+            return RuntimeModuleSupport.instance().getBootLayer() == runtimeModule.getLayer() && isNativeAccessEnabledForRuntimeBootLayerModule(runtimeModuleName);
         }
 
         /**
@@ -500,12 +737,38 @@ public final class ModuleLayerFeature implements InternalFeature {
          * versions. This method should be removed once {@link ReflectionUtil} becomes immune to
          * reflection filters.
          */
+        private static Field findFieldByName(Field[] fields, String name, boolean optional) {
+            var res = Arrays.stream(fields).filter(f -> f.getName().equals(name)).findAny();
+            if (res.isPresent()) {
+                return res.get();
+            } else if (optional) {
+                return null;
+            } else {
+                throw shouldNotReachHereAtRuntime();
+            }
+        }
+
         private static Field findFieldByName(Field[] fields, String name) {
-            return Arrays.stream(fields).filter(f -> f.getName().equals(name)).findAny().orElseThrow(VMError::shouldNotReachHere);
+            return findFieldByName(fields, name, false);
         }
 
         private static boolean isModuleSynthetic(Module m) {
-            return m.getDescriptor().modifiers().contains(ModuleDescriptor.Modifier.SYNTHETIC);
+            return m.getDescriptor() != null && m.getDescriptor().modifiers().contains(ModuleDescriptor.Modifier.SYNTHETIC);
+        }
+
+        static String formatModule(Module module) {
+            if (!module.isNamed()) {
+                return module.toString();
+            }
+            Optional<ResolvedModule> optionalResolvedModule = module.getLayer().configuration().findModule(module.getName());
+            assert optionalResolvedModule.isPresent();
+            ResolvedModule resolvedModule = optionalResolvedModule.get();
+            Optional<URI> location = resolvedModule.reference().location();
+            if (location.isPresent()) {
+                return module + ", location: " + location;
+            } else {
+                return module.toString();
+            }
         }
 
         static int distanceFromBootModuleLayer(ModuleLayer layer) {
@@ -519,37 +782,37 @@ public final class ModuleLayerFeature implements InternalFeature {
                             .orElse(0);
         }
 
-        public Module getRuntimeModuleForHostedModule(Module hostedModule, boolean optional) {
-            if (hostedModule.isNamed()) {
-                return getRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), optional);
-            }
+        public static Module getBuilderModule() {
+            return ModuleLayerFeature.class.getModule();
+        }
 
-            /*
-             * EVERYONE and ALL_UNNAMED modules are unnamed module instances that are used as
-             * markers throughout the JDK and therefore we need them in the image heap.
-             *
-             * We make an optimization that all hosted unnamed modules except EVERYONE module have
-             * the same runtime unnamed module. This does not break the module visibility semantics
-             * as unnamed modules can access all named modules, and visibility modifications that
-             * include unnamed modules do not depend on the actual instance, but only on the fact
-             * that the module is unnamed e.g., calling addExports from/to an unnamed module will do
-             * nothing.
-             */
+        public static String getMainModuleName() {
+            String mainModule = SubstrateOptions.Module.getValue();
+            return mainModule.isEmpty() ? null : mainModule;
+        }
 
-            if (hostedModule == everyoneModule) {
-                return everyoneModule;
+        public ModuleFinder getAppModuleFinder() {
+            List<Path> appModulePath = imageClassLoader.applicationModulePath();
+            if (appModulePath.isEmpty()) {
+                return null;
             } else {
-                return allUnnamedModule;
+                return ModuleFinder.of(appModulePath.toArray(new Path[0]));
             }
         }
 
-        public Module getRuntimeModuleForHostedModule(ClassLoader loader, String hostedModuleName, boolean optional) {
+        public Module getRuntimeModuleForHostedModule(Module hostedModule, boolean optional) {
+            return getRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), optional);
+        }
+
+        public Module getRuntimeModuleForHostedModule(ClassLoader hostedLoader, String hostedModuleName, boolean optional) {
+            ClassLoader loader = HostedSubstrateUtil.getRuntimeClassLoader(hostedLoader);
             Map<String, Module> loaderRuntimeModules = runtimeModules.get(loader);
             if (loaderRuntimeModules == null) {
                 if (optional) {
                     return null;
                 } else {
-                    throw VMError.shouldNotReachHere("No runtime modules registered for class loader: " + loader);
+                    throw VMError.shouldNotReachHere(
+                                    "Failed to find runtime module for hosted module " + hostedModuleName + ". No runtime modules have been registered for class loader: " + loader);
                 }
             }
             Module runtimeModule = loaderRuntimeModules.get(hostedModuleName);
@@ -557,22 +820,30 @@ public final class ModuleLayerFeature implements InternalFeature {
                 if (optional) {
                     return null;
                 } else {
-                    throw VMError.shouldNotReachHere("Runtime module " + hostedModuleName + "is not registered for class loader: " + loader);
+                    throw VMError.shouldNotReachHere("Runtime module " + hostedModuleName + " is not registered for class loader: " + loader);
                 }
             } else {
                 return runtimeModule;
             }
         }
 
-        public Module getOrCreateRuntimeModuleForHostedModule(Module hostedModule, ModuleDescriptor runtimeModuleDescriptor) {
-            if (hostedModule.isNamed()) {
-                return getOrCreateRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), runtimeModuleDescriptor);
+        public Module getOrCreateRuntimeModuleForHostedModule(Module hostedModule, AnalysisAccessBase access) {
+            /*
+             * Special module instances such as ALL_UNNAMED and EVERYONE_MODULE are not replicated
+             * as they only serve as marker modules (all their fields are null, including the loader
+             * field).
+             */
+            if (hostedModule == allUnnamedModule || hostedModule == everyoneModule) {
+                return hostedModule;
             } else {
-                return hostedModule == everyoneModule ? everyoneModule : allUnnamedModule;
+                boolean enableNativeAccess = allowsNativeAccess(hostedModule) || isNativeAccessEnabledForRuntimeBootLayerModule(hostedModule.getName());
+                return getOrCreateRuntimeModuleForHostedModule(hostedModule.getClassLoader(), hostedModule.getName(), hostedModule.getDescriptor(), access, enableNativeAccess);
             }
         }
 
-        public Module getOrCreateRuntimeModuleForHostedModule(ClassLoader loader, String hostedModuleName, ModuleDescriptor runtimeModuleDescriptor) {
+        public Module getOrCreateRuntimeModuleForHostedModule(ClassLoader hostedLoader, String hostedModuleName, ModuleDescriptor runtimeModuleDescriptor, AnalysisAccessBase access,
+                        boolean enableNativeAccess) {
+            ClassLoader loader = HostedSubstrateUtil.getRuntimeClassLoader(hostedLoader);
             synchronized (runtimeModules) {
                 Module runtimeModule = getRuntimeModuleForHostedModule(loader, hostedModuleName, true);
                 if (runtimeModule != null) {
@@ -580,12 +851,19 @@ public final class ModuleLayerFeature implements InternalFeature {
                 }
 
                 try {
-                    runtimeModule = moduleConstructor.newInstance(loader, runtimeModuleDescriptor);
+                    if (hostedModuleName == null) {
+                        runtimeModule = unnamedModuleConstructor.newInstance(loader);
+                    } else {
+                        runtimeModule = namedModuleConstructor.newInstance(loader, runtimeModuleDescriptor);
+                    }
                 } catch (InstantiationException | IllegalAccessException | InvocationTargetException ex) {
                     throw VMError.shouldNotReachHere("Failed to reflectively construct a runtime Module object.", ex);
                 }
                 runtimeModules.putIfAbsent(loader, new HashMap<>());
                 runtimeModules.get(loader).put(hostedModuleName, runtimeModule);
+                if (enableNativeAccess) {
+                    enableNativeAccess(access, runtimeModule);
+                }
                 return runtimeModule;
             }
         }
@@ -597,7 +875,7 @@ public final class ModuleLayerFeature implements InternalFeature {
          * and removal of VM state updates (otherwise we would be re-defining modules to the host
          * VM).
          */
-        Map<String, Module> synthesizeNameToModule(ModuleLayer runtimeModuleLayer, Function<String, ClassLoader> clf)
+        Map<String, Module> synthesizeNameToModule(AnalysisAccessBase access, ModuleLayer runtimeModuleLayer, Function<String, ClassLoader> clf)
                         throws IllegalAccessException, InvocationTargetException {
             Configuration cf = runtimeModuleLayer.configuration();
 
@@ -613,17 +891,20 @@ public final class ModuleLayerFeature implements InternalFeature {
                 ModuleDescriptor descriptor = mref.descriptor();
                 String name = descriptor.name();
                 ClassLoader loader = clf.apply(name);
-                Module m = getOrCreateRuntimeModuleForHostedModule(loader, name, descriptor);
+                boolean nativeAccess = false;
+                Module m = getOrCreateRuntimeModuleForHostedModule(loader, name, descriptor, access, nativeAccess);
                 if (!descriptor.equals(m.getDescriptor())) {
                     moduleDescriptorField.set(m, descriptor);
+                    access.rescanField(m, moduleDescriptorField);
                 }
-                patchModuleLayerField(m, runtimeModuleLayer);
+                patchModuleLayerField(access, m, runtimeModuleLayer);
                 nameToModule.put(name, m);
             }
 
             /*
              * Setup readability and exports/opens. This part is unchanged, save for field setters
-             * and VM update removals
+             * and VM update removals. Exports, reads, and opens collections are tightly packed as
+             * they aren't likely to grow after the initial setup.
              */
             for (ResolvedModule resolvedModule : cf.modules()) {
                 ModuleReference mref = resolvedModule.reference();
@@ -633,7 +914,7 @@ public final class ModuleLayerFeature implements InternalFeature {
                 Module m = nameToModule.get(mn);
                 assert m != null;
 
-                Set<Module> reads = new HashSet<>();
+                Set<Module> reads = new HashSet<>(resolvedModule.reads().size());
                 for (ResolvedModule other : resolvedModule.reads()) {
                     Module m2 = nameToModule.get(other.name());
                     reads.add(m2);
@@ -643,14 +924,15 @@ public final class ModuleLayerFeature implements InternalFeature {
                     reads.add(allUnnamedModule);
                 }
                 moduleReadsField.set(m, reads);
+                access.rescanField(m, moduleReadsField);
 
                 if (!descriptor.isOpen() && !descriptor.isAutomatic()) {
                     if (descriptor.opens().isEmpty()) {
-                        Map<String, Set<Module>> exportedPackages = new HashMap<>();
+                        Map<String, Set<Module>> exportedPackages = new HashMap<>(m.getDescriptor().exports().size());
                         for (ModuleDescriptor.Exports exports : m.getDescriptor().exports()) {
                             String source = exports.source();
                             if (exports.isQualified()) {
-                                Set<Module> targets = new HashSet<>();
+                                Set<Module> targets = new HashSet<>(exports.targets().size());
                                 for (String target : exports.targets()) {
                                     Module m2 = nameToModule.get(target);
                                     if (m2 != null) {
@@ -665,13 +947,13 @@ public final class ModuleLayerFeature implements InternalFeature {
                             }
                         }
                         moduleExportedPackagesField.set(m, exportedPackages);
+                        access.rescanField(m, moduleExportedPackagesField);
                     } else {
-                        Map<String, Set<Module>> openPackages = new HashMap<>();
-                        Map<String, Set<Module>> exportedPackages = new HashMap<>();
+                        Map<String, Set<Module>> openPackages = new HashMap<>(descriptor.opens().size());
                         for (ModuleDescriptor.Opens opens : descriptor.opens()) {
                             String source = opens.source();
                             if (opens.isQualified()) {
-                                Set<Module> targets = new HashSet<>();
+                                Set<Module> targets = new HashSet<>(opens.targets().size());
                                 for (String target : opens.targets()) {
                                     Module m2 = (Module) moduleFindModuleMethod.invoke(null, target, Map.of(), nameToModule, runtimeModuleLayer.parents());
                                     if (m2 != null) {
@@ -686,6 +968,7 @@ public final class ModuleLayerFeature implements InternalFeature {
                             }
                         }
 
+                        Map<String, Set<Module>> exportedPackages = new HashMap<>(descriptor.exports().size());
                         for (ModuleDescriptor.Exports exports : descriptor.exports()) {
                             String source = exports.source();
                             Set<Module> openToTargets = openPackages.get(source);
@@ -694,7 +977,7 @@ public final class ModuleLayerFeature implements InternalFeature {
                             }
 
                             if (exports.isQualified()) {
-                                Set<Module> targets = new HashSet<>();
+                                Set<Module> targets = new HashSet<>(exports.targets().size());
                                 for (String target : exports.targets()) {
                                     Module m2 = (Module) moduleFindModuleMethod.invoke(null, target, Map.of(), nameToModule, runtimeModuleLayer.parents());
                                     if (m2 != null) {
@@ -712,33 +995,37 @@ public final class ModuleLayerFeature implements InternalFeature {
                         }
 
                         moduleOpenPackagesField.set(m, openPackages);
+                        access.rescanField(m, moduleOpenPackagesField);
                         moduleExportedPackagesField.set(m, exportedPackages);
+                        access.rescanField(m, moduleExportedPackagesField);
                     }
                 }
+                access.rescanObject(m);
             }
 
             return nameToModule;
         }
 
         @SuppressWarnings("unchecked")
-        void addReads(Module module, Module other) throws IllegalAccessException {
+        void addReads(AfterAnalysisAccessImpl accessImpl, Module module, Module other) throws IllegalAccessException {
             Set<Module> reads = (Set<Module>) moduleReadsField.get(module);
             if (reads == null) {
-                reads = new HashSet<>();
+                reads = new HashSet<>(1);
                 moduleReadsField.set(module, reads);
             }
             reads.add(other == null ? allUnnamedModule : other);
+            accessImpl.rescanField(module, moduleReadsField);
         }
 
         @SuppressWarnings("unchecked")
-        void addExports(Module module, String pn, Module other) throws IllegalAccessException {
+        void addExports(AfterAnalysisAccessImpl accessImpl, Module module, String pn, Module other) throws IllegalAccessException {
             if (other != null && module.isExported(pn, other)) {
                 return;
             }
 
             Map<String, Set<Module>> exports = (Map<String, Set<Module>>) moduleExportedPackagesField.get(module);
             if (exports == null) {
-                exports = new HashMap<>();
+                exports = new HashMap<>(1);
                 moduleExportedPackagesField.set(module, exports);
             }
 
@@ -746,7 +1033,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (other == null) {
                 prev = exports.putIfAbsent(pn, allUnnamedModuleSet);
             } else {
-                HashSet<Module> targets = new HashSet<>();
+                HashSet<Module> targets = new HashSet<>(1);
                 targets.add(other);
                 prev = exports.putIfAbsent(pn, targets);
             }
@@ -754,17 +1041,18 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (prev != null) {
                 prev.add(other == null ? allUnnamedModule : other);
             }
+            accessImpl.rescanField(module, moduleExportedPackagesField);
         }
 
         @SuppressWarnings("unchecked")
-        void addOpens(Module module, String pn, Module other) throws IllegalAccessException {
+        void addOpens(AfterAnalysisAccessImpl accessImpl, Module module, String pn, Module other) throws IllegalAccessException {
             if (other != null && module.isOpen(pn, other)) {
                 return;
             }
 
             Map<String, Set<Module>> opens = (Map<String, Set<Module>>) moduleOpenPackagesField.get(module);
             if (opens == null) {
-                opens = new HashMap<>();
+                opens = new HashMap<>(1);
                 moduleOpenPackagesField.set(module, opens);
             }
 
@@ -772,7 +1060,7 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (other == null) {
                 prev = opens.putIfAbsent(pn, allUnnamedModuleSet);
             } else {
-                HashSet<Module> targets = new HashSet<>();
+                HashSet<Module> targets = new HashSet<>(1);
                 targets.add(other);
                 prev = opens.putIfAbsent(pn, targets);
             }
@@ -780,10 +1068,12 @@ public final class ModuleLayerFeature implements InternalFeature {
             if (prev != null) {
                 prev.add(other == null ? allUnnamedModule : other);
             }
+            accessImpl.rescanField(module, moduleOpenPackagesField);
         }
 
-        void patchModuleLayerField(Module module, ModuleLayer runtimeBootLayer) throws IllegalAccessException {
+        void patchModuleLayerField(AnalysisAccessBase accessImpl, Module module, ModuleLayer runtimeBootLayer) throws IllegalAccessException {
             moduleLayerField.set(module, runtimeBootLayer);
+            accessImpl.rescanField(module, moduleLayerField);
         }
 
         void patchModuleLoaderField(Module module, ClassLoader loader) throws IllegalAccessException {
@@ -794,12 +1084,19 @@ public final class ModuleLayerFeature implements InternalFeature {
             return moduleLayerConstructor.newInstance(cf, List.of(), null);
         }
 
-        void patchModuleLayerNameToModuleField(ModuleLayer moduleLayer, Map<String, Module> nameToModule) throws IllegalAccessException {
+        void patchModuleLayerNameToModuleField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, Map<String, Module> nameToModule) throws IllegalAccessException {
             moduleLayerNameToModuleField.set(moduleLayer, nameToModule);
+            accessImpl.rescanField(moduleLayer, moduleLayerNameToModuleField);
         }
 
-        void patchModuleLayerParentsField(ModuleLayer moduleLayer, List<ModuleLayer> parents) throws IllegalAccessException {
+        void patchModuleLayerParentsField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, List<ModuleLayer> parents) throws IllegalAccessException {
             moduleLayerParentsField.set(moduleLayer, parents);
+            accessImpl.rescanField(moduleLayer, moduleLayerParentsField);
+        }
+
+        void patchModuleLayerServicesCatalogField(AnalysisAccessBase accessImpl, ModuleLayer moduleLayer, ServicesCatalog servicesCatalog) throws IllegalAccessException {
+            moduleLayerServicesCatalogField.set(moduleLayer, servicesCatalog);
+            accessImpl.rescanField(moduleLayer, moduleLayerServicesCatalogField);
         }
 
         ClassLoader getClassLoaderForBootLayerModule(String name) {
@@ -811,6 +1108,99 @@ public final class ModuleLayerFeature implements InternalFeature {
         ClassLoader getClassLoaderForModuleInModuleLayer(ModuleLayer hostedModuleLayer, String name) {
             Optional<Module> module = hostedModuleLayer.findModule(name);
             return module.isPresent() ? module.get().getClassLoader() : imageClassLoader.getClassLoader();
+        }
+
+        Object invokeSystemModuleFinderAllSystemModules() {
+            try {
+                return systemModuleFindersAllSystemModulesMethod.invoke(null);
+            } catch (ReflectiveOperationException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively invoke SystemModuleFinders.allSystemModules().", e);
+            }
+        }
+
+        ModuleFinder invokeSystemModuleFinderOf(Object systemModules) {
+            try {
+                return (ModuleFinder) systemModuleFindersOfMethod.invoke(null, systemModules);
+            } catch (ReflectiveOperationException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively invoke SystemModuleFinders.of().", e);
+            }
+        }
+
+        Object invokeSystemModuleFinderSystemModules(String mainModule) {
+            try {
+                return systemModuleFindersSystemModulesMethod.invoke(null, mainModule);
+            } catch (ReflectiveOperationException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively invoke SystemModuleFinders.systemModules().", e);
+            }
+        }
+
+        ModuleFinder invokeModuleBootstrapLimitFinder(ModuleFinder finder, Set<String> roots, Set<String> otherModules) {
+            try {
+                return (ModuleFinder) moduleBootstrapLimitFinderMethod.invoke(null, finder, roots, otherModules);
+            } catch (ReflectiveOperationException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively invoke ModuleBootstrap.limitFinder().", e);
+            }
+        }
+
+        @SuppressWarnings("unchecked")
+        Set<String> invokeDefaultRootsComputeMethod(ModuleFinder finder1, ModuleFinder finder2) {
+            try {
+                return (Set<String>) defaultRootsComputeMethod.invoke(null, finder1, finder2);
+            } catch (ReflectiveOperationException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively invoke DefaultRoots.compute().", e);
+            }
+        }
+
+        /**
+         * In the future, this can be replaced by calling Module#isNativeAccessEnabled(). We
+         * currently do it this way to still be compatible with older JDKs.
+         */
+        boolean allowsNativeAccess(Module module) {
+            assert moduleEnableNativeAccessField != null : "Only available on JDK19+";
+            try {
+                return (boolean) moduleEnableNativeAccessField.get(module);
+            } catch (IllegalAccessException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively access Module.enableNativeAccess.", e);
+            }
+
+        }
+
+        /**
+         * Allows the given module to perform native access.
+         */
+        void enableNativeAccess(AnalysisAccessBase access, Module module) {
+            VMError.guarantee(!allowsNativeAccess(module), "Cannot reset native access");
+            assert moduleEnableNativeAccessField != null : "Only available on JDK19+";
+            try {
+                moduleEnableNativeAccessField.set(module, true);
+                access.rescanField(module, moduleEnableNativeAccessField);
+            } catch (IllegalAccessException e) {
+                throw VMError.shouldNotReachHere("Failed to reflectively set Module.enableNativeAccess.", e);
+            }
+        }
+
+        /**
+         * Patch module references that contain URLs with a non-JRT protocol. Module references can
+         * contain URLs that capture hosted directories, e.g.,
+         * {@linkplain "file:///home/user/dir/foo.jar"}. See
+         * {@link com.oracle.svm.hosted.image.DisallowedImageHeapObjectFeature} for more details on
+         * what substrings are detected during the image build.
+         */
+        static final class ResetModuleReferenceLocation implements FieldValueTransformer {
+
+            static final FieldValueTransformer INSTANCE = new ResetModuleReferenceLocation();
+
+            private ResetModuleReferenceLocation() {
+            }
+
+            @Override
+            public Object transform(Object receiver, Object originalValue) {
+                if (originalValue == null || originalValue.toString().startsWith("jrt://")) {
+                    return originalValue;
+                } else {
+                    return null;
+                }
+            }
         }
     }
 }
