@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -86,10 +86,17 @@ import com.oracle.truffle.api.TruffleLanguage.Env;
 import com.oracle.truffle.api.test.polyglot.MultiThreadedLanguage.LanguageContext;
 import com.oracle.truffle.api.test.polyglot.MultiThreadedLanguage.ThreadRequest;
 import com.oracle.truffle.tck.tests.TruffleTestAssumptions;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 
-public class MultiThreadedLanguageTest {
+@SuppressWarnings("hiding")
+@RunWith(Parameterized.class)
+public class MultiThreadedLanguageTest extends AbstractThreadedPolyglotTest {
 
-    static volatile LanguageContext langContext;
+    @BeforeClass
+    public static void runWithWeakEncapsulationOnly() {
+        TruffleTestAssumptions.assumeWeakEncapsulation();
+    }
 
     private static Value eval(Context context, Function<Env, Object> f) {
         MultiThreadedLanguage.runinside.set(f);
@@ -98,11 +105,6 @@ public class MultiThreadedLanguageTest {
         } finally {
             MultiThreadedLanguage.runinside.set(null);
         }
-    }
-
-    @BeforeClass
-    public static void runWithWeakEncapsulationOnly() {
-        TruffleTestAssumptions.assumeWeakEncapsulation();
     }
 
     @Test
@@ -171,7 +173,7 @@ public class MultiThreadedLanguageTest {
             return req.singleThreaded;
         };
 
-        ExecutorService executor = createExecutor(1);
+        ExecutorService executor = createExecutor(1, vthreads);
 
         assertEquals(0, initializeCount.get());
         assertNull(lastInitializeRequest.get());
@@ -298,7 +300,7 @@ public class MultiThreadedLanguageTest {
         final int threadCount = 10;
         final int outerLoop = 10;
         final int innerLoop = 100;
-        ExecutorService executor = createExecutor(threadCount);
+        ExecutorService executor = createExecutor(threadCount, vthreads);
         for (int outerIter = 0; outerIter < outerLoop; outerIter++) {
             resetData();
 
@@ -381,9 +383,7 @@ public class MultiThreadedLanguageTest {
 
     @Test
     public void testAccessTruffleContextPolyglotThread() throws Throwable {
-        MultiThreadedLanguage.isThreadAccessAllowed = (req) -> {
-            return true;
-        };
+        MultiThreadedLanguage.isThreadAccessAllowed = (req) -> true;
         Engine engine = Engine.create();
         AtomicReference<Throwable> seenError = new AtomicReference<>();
         Context context = Context.newBuilder().allowCreateThread(true).engine(engine).build();
@@ -391,7 +391,7 @@ public class MultiThreadedLanguageTest {
             public Object apply(Env env) {
                 List<Thread> createdThreads = new ArrayList<>();
                 ExecutorService service = Executors.newFixedThreadPool(10, (r) -> {
-                    Thread t = env.createThread(r);
+                    Thread t = env.newTruffleThreadBuilder(r).virtual(vthreads).build();
                     t.setUncaughtExceptionHandler((thread, e) -> seenError.set(e));
                     createdThreads.add(t);
                     return t;
@@ -477,15 +477,15 @@ public class MultiThreadedLanguageTest {
                 List<TruffleContext> contexts = new ArrayList<>();
                 for (int i = 0; i < iterations; i++) {
                     TruffleContext context = env.newInnerContextBuilder().initializeCreatorContext(true).inheritAllAccess(true).build();
-                    Thread thread = env.createThread(() -> {
+                    Thread thread = env.newTruffleThreadBuilder(() -> {
                         assertUniqueContext();
                         List<Thread> innerThreads = new ArrayList<>();
                         List<TruffleContext> innerContexts = new ArrayList<>();
                         for (int j = 0; j < innerIterations; j++) {
                             TruffleContext innerContext = env.newInnerContextBuilder().initializeCreatorContext(true).inheritAllAccess(true).build();
-                            Thread innerThread = env.createThread(() -> {
+                            Thread innerThread = env.newTruffleThreadBuilder(() -> {
                                 assertUniqueContext();
-                            }, innerContext);
+                            }).virtual(vthreads).context(innerContext).build();
                             innerThread.setUncaughtExceptionHandler(uncaughtHandler);
                             innerThread.start();
 
@@ -502,7 +502,7 @@ public class MultiThreadedLanguageTest {
                             innerContext.close();
                         }
 
-                    }, context);
+                    }).virtual(vthreads).context(context).build();
                     thread.setUncaughtExceptionHandler(uncaughtHandler);
                     thread.start();
                     threads.add(thread);
@@ -541,16 +541,16 @@ public class MultiThreadedLanguageTest {
                 List<Thread> threads = new ArrayList<>();
                 LanguageContext languageContext = MultiThreadedLanguage.getContext();
                 for (int i = 0; i < iterations; i++) {
-                    Thread thread = env.createThread(() -> {
+                    Thread thread = env.newTruffleThreadBuilder(() -> {
                         LanguageContext threadContext = MultiThreadedLanguage.getContext();
                         assertSame(languageContext, threadContext);
                         List<Thread> innerThreads = new ArrayList<>();
                         List<TruffleContext> innerContexts = new ArrayList<>();
                         for (int j = 0; j < innerIterations; j++) {
-                            Thread innerThread = env.createThread(() -> {
+                            Thread innerThread = env.newTruffleThreadBuilder(() -> {
                                 LanguageContext innerThreadContext = MultiThreadedLanguage.getContext();
                                 assertSame(languageContext, innerThreadContext);
-                            }, env.getContext());
+                            }).virtual(vthreads).context(env.getContext()).build();
                             innerThread.setUncaughtExceptionHandler(uncaughtHandler);
                             innerThread.start();
 
@@ -566,7 +566,7 @@ public class MultiThreadedLanguageTest {
                             innerContext.close();
                         }
 
-                    }, env.getContext());
+                    }).virtual(vthreads).context(env.getContext()).build();
                     thread.setUncaughtExceptionHandler(uncaughtHandler);
                     thread.start();
                     threads.add(thread);
@@ -600,13 +600,13 @@ public class MultiThreadedLanguageTest {
         Thread returnThread = eval(context, new Function<Env, Object>() {
             public Object apply(Env env) {
                 Semaphore waitForEnter = new Semaphore(0);
-                Thread t = env.createThread(() -> {
+                Thread t = env.newTruffleThreadBuilder(() -> {
                     try {
                         waitForEnter.release();
                         wait.acquire();
                     } catch (InterruptedException e) {
                     }
-                });
+                }).virtual(vthreads).build();
                 t.start();
                 try {
                     waitForEnter.acquire();
@@ -629,8 +629,17 @@ public class MultiThreadedLanguageTest {
 
     @Test
     public void testInterruptPolyglotThread() throws Throwable {
+        AtomicReference<Thread> tref = new AtomicReference<>();
         MultiThreadedLanguage.isThreadAccessAllowed = (req) -> {
             return true;
+        };
+        MultiThreadedLanguage.finalizeContext = (context) -> {
+            try {
+                tref.get().join();
+            } catch (InterruptedException e) {
+                throw new AssertionError(e);
+            }
+            return null;
         };
         AtomicBoolean seenInterrupt = new AtomicBoolean(false);
         AtomicReference<Throwable> seenError = new AtomicReference<>();
@@ -640,14 +649,15 @@ public class MultiThreadedLanguageTest {
         eval(context, new Function<Env, Object>() {
             public Object apply(Env env) {
                 Semaphore waitForEnter = new Semaphore(0);
-                Thread t = env.createThread(() -> {
+                Thread t = env.newTruffleThreadBuilder(() -> {
                     try {
                         waitForEnter.release();
                         wait.acquire();
                     } catch (InterruptedException e) {
                         seenInterrupt.set(true);
                     }
-                });
+                }).virtual(vthreads).build();
+                tref.set(t);
                 t.setUncaughtExceptionHandler((thread, e) -> seenError.set(e));
                 t.start();
                 try {
@@ -671,8 +681,8 @@ public class MultiThreadedLanguageTest {
                 return req.singleThreaded;
             };
             eval(context, (env) -> {
-                AbstractPolyglotTest.assertFails(() -> env.createThread(() -> {
-                }), IllegalStateException.class, (ise) -> {
+                AbstractPolyglotTest.assertFails(() -> env.newTruffleThreadBuilder(() -> {
+                }).virtual(vthreads).build(), IllegalStateException.class, (ise) -> {
                     assertTrue(ise.getMessage().contains("Multi threaded access requested by thread"));
                 });
                 return null;
@@ -752,10 +762,10 @@ public class MultiThreadedLanguageTest {
         }
     }
 
-    private ExecutorService createExecutor(int noThreads) {
+    private ExecutorService createExecutor(int noThreads, boolean vthreads) {
         threads.clear();
         ExecutorService service = Executors.newFixedThreadPool(noThreads, (r) -> {
-            Thread t = new Thread(r);
+            Thread t = vthreads ? Thread.ofVirtual().unstarted(r) : new Thread(r);
             threads.add(t);
             return t;
         });
